  * Add Lwt_result.error, Lwt_result.iter, and Lwt_result.iter_error for consistency with Stdlib. (#927, Antonin Décimo)
  * Lwt_result.bind_error. (#943, Boning Dong)
  * Add ?cloexec parameter to Lwt_io.pipe. (#911, Antonin Décimo)

====== Fixes ======

  * Fix win32_spawn leaking dev_null fd in the parent process. (#906, Antonin Décimo)
  * Prefer SetHandleInformation to DuplicateHandle in set_close_on_exec for sockets. DuplicateHandle mustn't be used on sockets. (#907, Antonin Décimo)
  * Lwt.pick and Lwt.choose select preferentially failed promises as per documentation (#856, #874, Raman Varabets)
  * Use the WSA_FLAG_NO_HANDLE_INHERIT on Windows when creating sockets with WSASocket if the cloexec (non-inheritable) parameter is true. Fixes a Windows problem where a child process would inherit a supposedly non-inheritable socket. (#910, Antonin Décimo)
  * Fix macOS/arm64 tests which have a 16k page. (#932, Kate Deplaix)
  * Fix Lwt_unix.closedir incorrectly checking the return value of closedir(3). (#942, Antonin Décimo)
  * Fix custom_operations struct not fully initialized after OCaml 4.08. (Antonin Décimo, #918)
  * Fix missing include directive. (#940, Antonin Décimo)
  * Fix missing initialisation in Unix stub. (#941, Antonin Décimo)

====== Deprecations ======

  * Alias Lwt_result.map_err and Lwt_result.bind_lwt_err to Lwt_result.map_error and Lwt_result.bind_lwt_error for consistency with Stdlib. (#927, Antonin Décimo)

===== 5.5.0 =====

====== Deprecations ======

  * Lwt_main.yield and Lwt_unix.yield are deprecated in favor of the generic Lwt.pause, and Lwt_unix.auto_yield is deprecated in favor of the new Lwt_unix.auto_pause. Currently, Lwt_main.run resolves paused promises more frequently than yielded promises; the difference is unintended but existing applications could unintentionally depend on it. (#855, #858, Favonia)

====== Fixes ======

  * Use is_blocking in dup and dup2 to fix ENOTSOCK on Windows. (#869, Antonin Décimo)
